# ai-coding-commander

./: .gitignore  README.md  pyproject.toml
.codex/: known-failures.json
.codex/docs/: 协作偏好.md  当前任务.md  当前状态.md  恢复入口.md  验收记录.md
docs/: commander-capability-roadmap.md  external-skills.md  skill-trigger-matrix.md
docs/superpowers/plans/: 2026-04-17-commander-sharing-and-installation-implementation.md  2026-04-17-project-codex-bootstrap-implementation.md  2026-04-17-taskmaster-capability-absorption-implementation.md  2026-04-18-current-task-sync-implementation.md  2026-04-28-high-signal-commander-v2-implementation.md  2026-04-28-preference-memory-protocol-implementation.md
docs/superpowers/specs/: 2026-04-17-commander-sharing-and-installation-design.md  2026-04-17-current-task-sync-design.md  2026-04-17-project-codex-bootstrap-design.md  2026-04-17-taskmaster-capability-absorption-design.md  2026-04-28-high-signal-commander-v2-design.md  2026-04-28-preference-memory-protocol-design.md
install/: install-commander.ps1
legacy/agent-runtime/: README.md
skills/commander-mode/: SKILL.md
skills/commander-reuse-upgrader/: SKILL.md
skills/execution-failure-guard/: SKILL.md
tests/: test_commander_activation.py  test_commander_reuse_upgrader_skill.py  test_execution_failure_guard_skill.py  test_high_signal_commander_docs.py  test_install_commander.py  test_known_failures_script.py  test_portable_harness.py  test_project_codex_bootstrap.py  test_skill_trigger_matrix.py  test_sync_current_task.py  test_sync_preference_memory.py  test_verify_skill_install.py
(+169 files in other folders)
