[project]
name = "ai-coding-commander"
version = "0.1.0"
description = "High-signal commander skill for AI coding workflows."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
packages = []
